recursion.cons.lessons.recursion.cons.ButLast.scala.error
butLast:-6: error: Missing closing brace `}' assumed here
try {
^butLast:1: error: expected class or object definition
def butLast(l:List[Int]): List[Int] = {
^