recursion.cons.lessons.recursion.cons.ButLast.scala.code
def butLast(l:List[Int]): List[Int] = {
var tableau:Array[Int]
for(i <- 0 to l.length - 1)
{
	if(i != l.length-1)
	{
		tableau = tableau(i)
	}
return tableau
}

